@@ -1,3 +1,10 @@
+2012-12-08  Woxxy  <woxxy@foolrulez.org>
+
+	* Added Connection::ping() and Connection::close()
+
+	* Fixed bug where expecting false instead of an exception on Connection::getConnection()
+
+
 2012-12-06  Woxxy  <woxxy@foolrulez.org>
 
     * Added Queue class
